Fix Unclosed Attribute On Img tag

--- a/coding-example.html
+++ b/coding-example.html
@@ -49,7 +49,7 @@
     </form>
     <ul id="comment-list">
       <li class="comment">
-        <img width="40xp" height=40px" src="https://www.buira.org/assets/images/shared/default-profile.png">
+        <img width="40xp" height="40px" src="https://www.buira.org/assets/images/shared/default-profile.png">
         <div>작성자</div>
         <time>2019-09-06</time>
         <p>댓글 내용</p>
